# anvel

./: .gitignore  README.md  SECURITY.md  index.html  package-lock.json  package.json  updater.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  routes.rs
src/components/: AudioTag.tsx  Footer.tsx  SideNav.tsx  TopNav.tsx  actions.ts  dialogs.tsx
src/context/: index.ts
src/pages/: Home.tsx  LandingPage.tsx  Media.tsx
src/types/: definitions.ts
src/ws/: index.ts
