[package]
name = "anvel"
version = "0.2.6"
edition = "2021"
description = "Anvel is a networking program for file sharing.."
license = "MIT License"
authors = [
    "imrany <imranmat254@gmail.com>",
]
publish=false
repository = "https://github.com/imrany/anvel"
readme = "README.md"
categories = ["command-line-utilities", "wasm", "web-programming"]
keywords = ["Anvel", "Productivity", "Network", "connect"]
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[package.metadata]
authors = ["imrany <imranmat254@gmail.com>"]
license = "MIT License"
repository = "https://github.com/imrany/anvel"
homepage = "https://yourwebsite.com"
description = "Anvel is a networking program for file sharing.."
ProductName = "Anvel"
LegalCopyright = "Copyright © 2022"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
anyhow = "1.0.75"
async-std = "1.12.0"
current_platform = "0.2.0"
dirs = "5.0.1"
futures = "0.3.29"
futures-util = "0.3.30"
local-ip-address = "0.5.6"
open = "5.0.1"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tauri = { version = "1", features = [ "api-all"] }
serde_json = "1"
notify-rust = "4.11.0"
actix-web-actors = "4.3.0"
actix = "0.13.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
